@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.elasticsearch.plugin</groupId>
     <artifactId>plugins</artifactId>
-    <version>2.0.1</version>
+    <version>2.1.0</version>
   </parent>
 
   <groupId>org.carrot2</groupId>
