@@ -1,6 +1,10 @@
 
 ElasticSearch-Carrot2 Change Log
 
+================ ElasticSearch-Carrot2 2.1.0 ====================
+
+No changes (ES version compatibility release).
+
 ================ ElasticSearch-Carrot2 2.0.1 ====================
 
 No changes (ES version compatibility release).
